unwanted horizontal scroll bar fixed

--- a/src/components/Pagination/style.css
+++ b/src/components/Pagination/style.css
@@ -1,5 +1,6 @@
 .page-row {
     margin-left: 64px;
+    margin-right: 64px;
 }
 
 .pagination > li {
